--- a/error.html
+++ b/error.html
@@ -144,6 +144,8 @@
         </a>
     </div>
 </section>
+
+
 <section class="section section_header section_error">
     <div class="container-fluid">
         <div class="containerBreak pt-0">
@@ -156,93 +158,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<section class="section section_footer">
-    <div class="container-fluid">
-        <div class="section_footer_body">
-            <div class="row">
-                <div class="col-lg-3">
-                    <a href="#" class="section_footer_logo">
-                        <i class="dtech-icons dtech-logo"></i>
-                    </a>
-                </div>
-                <div class="col-lg-3">
-                    <div class="section_footer_section">
-                        <h3 class="section_footer_section--header big special">
-                            Get in touch
-                        </h3>
-                        <div class="section_footer_section--body">
-                            Standing still is not an option. We develop with the future of your brand in mind. Where do you want to go, which channels are you going to use to get there, and where will the conversion take place? Stimmt helps you answer those questions.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="section_footer_section">
-                        <h3 class="section_footer_section--header">
-                            email addresses
-                        </h3>
-                        <div class="section_footer_section--body">
-                            <ul>
-                                <li>
-                                    <a href="mailto:support@dtech.az">Support@dtech.az</a>
-                                </li>
-                                <li>
-                                    <a href="mailto:nazim.aliyev@dtech.az">nazim.aliyev@dtech.az</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="section_footer_section">
-                        <h3 class="section_footer_section--header">
-                            Our address in Baku
-                        </h3>
-                        <div class="section_footer_section--body">
-                            <ul>
-                                <li>
-                                    Nizami 1/3. Nizami Plaza
-                                </li>
-                                <li>
-                                    066 js Amsterdam
-                                </li>
-                                <li>
-                                    <a href="tel:+994502016136">+994 50 201 61 36</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section_footer_footer">
-            <div class="row">
-                <div class="col-lg-3 offset-lg-3">
-                    <div class="section_footer_section">
-                        <div class="section_footer_section--body2">
-                            <span class="full">©</span> dTech - data technologies & it solution
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="section_footer_section">
-                        <a href="#" class="section_footer_section--body2">
-                            List of our work ( PDF ) download
-                            <span class="dtech-icons dtech-download"></span>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="section_footer_section">
-                        <a href="#" class="section_footer_section--body2">
-                            Privacy Statement ( PDF ) download
-                            <span class="dtech-icons dtech-download"></span>
+                    <div class="text-center pt-5">
+                        <a href="index.html" class="customBtn" aria-label="Homepage">
+                            <span>Home page</span>
                         </a>
                     </div>
                 </div>
